--- a/client/public/ui/index.html
+++ b/client/public/ui/index.html
@@ -27,6 +27,7 @@
     <div id="root">
       <div>
         <div class="comments">
+          <h2>Comments (2)</h2>
           <div class="parent-comment">
             <div class="comment">
               <hr />
