--- a/client/public/ui/index.html
+++ b/client/public/ui/index.html
@@ -79,7 +79,28 @@
                 </div>
                 <p>Ratione quibusdam sed doloremque expedita fugit similique et aut.</p>
               </div>
-              <a href="#" class="show_more">Show More Replies (4)</a>
+              <div class="comment">
+                <hr />
+                <div class="image">
+                  <img src="/images/no-user-image.gif" alt=""/>
+                </div>
+                <div class="header">
+                  <h3 class="author">Bernice Kautzer</h3>
+                  <span>2 hours ago</span>
+                </div>
+                <p>Ratione quibusdam sed doloremque expedita fugit similique et aut.</p>
+              </div>
+              <div class="comment">
+                <hr />
+                <div class="image">
+                  <img src="/images/no-user-image.gif" alt=""/>
+                </div>
+                <div class="header">
+                  <h3 class="author">Bernice Kautzer</h3>
+                  <span>2 hours ago</span>
+                </div>
+                <p>Ratione quibusdam sed doloremque expedita fugit similique et aut.</p>
+              </div>
             </div>
           </div>
         </div>
